@startuml MedFlow_Class_Diagram
!theme plain
skinparam linetype ortho
left to right direction

title MedFlow - Diagramme de Classes Global

' ============================================
' CLASSE: USER
' ============================================
class User {
  -_id: ObjectId
  -firstName: String
  -lastName: String
  -email: String
  -phone: String
  -CIN: String
  -dob: Date
  -gender: String
  -password: String
  -role: String {SuperAdmin, Admin, Doctor, Receptionist, Patient}
  -doctorDepartment: String
  -docAvatar: {public_id, url}
  -clinicId: ObjectId
  --
  +comparePassword(enteredPassword): Boolean
  +generateJsonWebToken(): String
}

' ============================================
' CLASSE: CLINIC
' ============================================
class Clinic {
  -_id: ObjectId
  -name: String
  -address: String
  -phone: String
  -email: String
  -services: String[]
  -tariff: {consultation: Number}
  -ownerId: ObjectId
  -isActive: Boolean
  -createdAt: Date
  -updatedAt: Date
}

' ============================================
' CLASSE: APPOINTMENT
' ============================================
class Appointment {
  -_id: ObjectId
  -firstName: String
  -lastName: String
  -phone: String
  -CIN: String
  -email: String
  -dob: Date
  -gender: String
  -appointment_date: String
  -department: String
  -doctor: {firstName, lastName}
  -hasVisited: Boolean
  -doctorId: ObjectId
  -patientId: ObjectId
  -address: String
  -status: String {Pending, Accepted, Rejected}
  -clinicId: ObjectId
}

' ============================================
' CLASSE: SCHEDULE
' ============================================
class Schedule {
  -_id: ObjectId
  -doctorId: ObjectId
  -dayOfWeek: String {Monday..Sunday}
  -date: Date
  -startTime: String
  -endTime: String
  -duration: Number
  -isAvailable: Boolean
  -clinicId: ObjectId
  -createdAt: Date
  -updatedAt: Date
}

' ============================================
' CLASSE: MEDICAL RECORD
' ============================================
class MedicalRecord {
  -_id: ObjectId
  -patientId: ObjectId
  -doctorId: ObjectId
  -appointmentId: ObjectId
  -visitDate: Date
  -diagnosis: String
  -symptoms: String
  -examination: String
  -treatment: String
  -notes: String
  -vitalSigns: {bloodPressure, heartRate, temperature, weight, height}
  -clinicId: ObjectId
  -createdAt: Date
  -updatedAt: Date
}

' ============================================
' CLASSE: PRESCRIPTION
' ============================================
class Prescription {
  -_id: ObjectId
  -patientId: ObjectId
  -doctorId: ObjectId
  -appointmentId: ObjectId
  -medicalRecordId: ObjectId
  -prescriptionDate: Date
  -medications: Medication[]
  -notes: String
  -pdfUrl: String
  -pdfPublicId: String
  -clinicId: ObjectId
  -createdAt: Date
  -updatedAt: Date
}

' ============================================
' CLASSE: MEDICATION (Embedded)
' ============================================
class Medication {
  -name: String
  -dosage: String
  -frequency: String
  -duration: String
  -instructions: String
}

' ============================================
' CLASSE: INVOICE
' ============================================
class Invoice {
  -_id: ObjectId
  -invoiceNumber: String
  -patientId: ObjectId
  -appointmentId: ObjectId
  -items: InvoiceItem[]
  -subtotal: Number
  -tax: Number
  -discount: Number
  -total: Number
  -status: String {Pending, Partially Paid, Paid, Cancelled}
  -payments: Payment[]
  -dueDate: Date
  -notes: String
  -clinicId: ObjectId
  -createdBy: ObjectId
  -createdAt: Date
  -updatedAt: Date
}

' ============================================
' CLASSE: INVOICE ITEM (Embedded)
' ============================================
class InvoiceItem {
  -description: String
  -quantity: Number
  -unitPrice: Number
  -total: Number
}

' ============================================
' CLASSE: PAYMENT (Embedded)
' ============================================
class Payment {
  -amount: Number
  -paymentMethod: String
  -paymentDate: Date
  -transactionId: String
  -notes: String
}

' ============================================
' CLASSE: MESSAGE
' ============================================
class Message {
  -_id: ObjectId
  -firstName: String
  -lastName: String
  -phone: String
  -email: String
  -message: String
  -clinicId: ObjectId
}

' ============================================
' RELATIONS
' ============================================

' User relations
User "1" --> "0..*" Clinic : owns (ownerId)
User "0..1" --> "1" Clinic : belongs to (clinicId)

' Appointment relations
Appointment "1" --> "1" User : patient (patientId)
Appointment "1" --> "1" User : doctor (doctorId)
Appointment "1" --> "1" Clinic : clinic (clinicId)

' Schedule relations
Schedule "1" --> "1" User : doctor (doctorId)
Schedule "1" --> "1" Clinic : clinic (clinicId)

' MedicalRecord relations
MedicalRecord "1" --> "1" User : patient (patientId)
MedicalRecord "1" --> "1" User : doctor (doctorId)
MedicalRecord "0..1" --> "1" Appointment : appointment (appointmentId)
MedicalRecord "1" --> "1" Clinic : clinic (clinicId)

' Prescription relations
Prescription "1" --> "1" User : patient (patientId)
Prescription "1" --> "1" User : doctor (doctorId)
Prescription "0..1" --> "1" Appointment : appointment (appointmentId)
Prescription "0..1" --> "1" MedicalRecord : medicalRecord (medicalRecordId)
Prescription "1" --> "1" Clinic : clinic (clinicId)
Prescription "1" --> "*" Medication : contains

' Invoice relations
Invoice "1" --> "1" User : patient (patientId)
Invoice "0..1" --> "1" Appointment : appointment (appointmentId)
Invoice "1" --> "1" User : createdBy (createdBy)
Invoice "1" --> "1" Clinic : clinic (clinicId)
Invoice "1" --> "*" InvoiceItem : contains
Invoice "1" --> "*" Payment : payments

' Message relations
Message "1" --> "1" Clinic : clinic (clinicId)

@enduml

